# paint

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  edit.cpp  fed.cpp  fedMain.cpp  main.cpp  paintMain.cpp  player.cpp  telly.cpp
app/: CMakeLists.txt  cApp.cpp  cApp.h  cDirectX11.cpp  cDirectX11App.cpp  cDx11App.cpp  cDx11Graphics.cpp  cGL2Graphics.h  cGL3Graphics.h  cGLES3Graphics.h  cGlfwApp.cpp  cGraphics.cpp  cGraphics.h  cOpenGL3.cpp  cOpenGL3App.cpp  cOpenGL3AppNoBackend.cpp  cOpenGL3BackendApp.cpp  cOpenGLApp.cpp  cPlatform.cpp  cPlatform.h  cSdlApp.cpp  cUI.cpp  cUI.h  cVulkanGraphics.h  cWin32App.cpp  cWin32Platform.cpp  capture.cpp  demo.cpp  edit.cpp  mapApp.cpp  myImgui.cpp  myImgui.h  player.cpp  telly.cpp
audio/: CMakeLists.txt  audioHelpers.h  audioWASAPI.h  cCaptureWASAPI.cpp  cCaptureWASAPI.h  cLinuxAudio.h  cWinAudio.cpp  cWinAudio.h  cWinAudio16.cpp  cWinAudio16.h  cWinAudio32.cpp  cWinAudio32.h  capture.cpp  iAudio.h  kiss_fft.h  kiss_fft_guts.h  kiss_fftr.c  kiss_fftr.h  pulse.c
brush/: CMakeLists.txt  cBrush.cpp  cBrush.h  cBrushBase.cpp  cPaintBrush.cpp  cPaintCpuBrush.cpp  cPaintGpuBrush.cpp
canvas/: CMakeLists.txt  cCanvas.cpp  cCanvas.h  cLayer.cpp  cLayer.h
common/: CMakeLists.txt  basicTypes.h  cBaseOptions.h  cDvbUtils.cpp  cDvbUtils.h  cDvbUtilsHuff.cpp  cFileUtils.h  cFileView.cpp  cFileView.h  cLog.cpp  cLog.h  cMiniLog.cpp  cPointRectColor.h  cVecMat.h  fileUtils.h  iOptions.h  pointRectColor.h  readerWriterQueue.h  tinyfiledialogs.c  tinyfiledialogs.h  utils.h  vecMat.h
decoder/: CMakeLists.txt  cAacDecoder.cpp  cAudioParser.cpp  cFFmpegAudioDecoder.cpp  cFFmpegAudioDecoder.h  cFileAnalyse.cpp  cFileAnalyse.h  cFileView.cpp  cFileView.h  cJpegAnalyse.cpp  cJpegAnalyse.h  cJpegAnalyser.h  cTextAnalyse.cpp  cTextAnalyse.h
decoders/: CMakeLists.txt  cAudioFrame.h  cAudioParser.cpp  cAudioParser.h  cAudioPlayer.cpp  cAudioPlayer.h  cAudioRender.cpp  cAudioRender.h  cDecoder.h  cDecoderQueueItem.h  cFFmpegAudioDecoder.cpp  cFFmpegAudioDecoder.h  cFFmpegVideoDecoder.h  cFFmpegVideoFrame.h  cFrame.h  cJpegAnalyse.cpp  cPlayer.cpp  cPlayer.h  cRender.cpp  cRender.h  cSongFFmpegAudioDecoder.cpp  cSongFFmpegAudioDecoder.h  cSubtitleDecoder.h  cSubtitleFrame.h  cSubtitleRender.cpp  cSubtitleRender.h  cTextAnalyse.h  cVideoFrame.h  cVideoRender.cpp  cVideoRender.h  iAudioDecoder.h  vf_w3fdif.asm  vf_w3fdif.c
dvb/: CMakeLists.txt  cAudioDecoder.cpp  cAudioDecoder.h  cAudioFrame.h  cAudioRender.cpp  cAudioRender.h  cDecoder.cpp  cDecoder.h  cDecoderQueueItem.h  cDvb.cpp  cDvb.cpp.ok  cDvb.h  cDvbMultiplex.h  cDvbSource.cpp  cDvbSource.h  cDvbStream.cpp  cDvbStream.h  cDvbSubtitle.cpp  cDvbSubtitle.h  cDvbSubtitleDecoder.cpp  cDvbSubtitleDecoder.h  cDvbTransportStream.cpp  cDvbTransportStream.h  cDvbUtils.cpp  cDvbUtils.h  cDvbUtilsHuff.cpp  cFFmpegAudioDecoder.h  cFFmpegVideoDecoder.h  cFFmpegVideoFrame.h  cFrame.h  cPlayer.cpp  cPlayer.h  cRender.cpp  cRender.h  cSubtitle.cpp  cSubtitle.h  cSubtitleDecoder.cpp  cSubtitleDecoder.h  cSubtitleFrame.h  cSubtitleImage.h  (+17 more)
fed/: CMakeLists.txt  cDocument.cpp  cDocument.h  cEditUI.cpp  cFed.cpp  cFed.h  cFedApp.cpp  cFedApp.h  cFedDocument.cpp  cFedDocument.h  cFedUI.cpp  cMemEdit.cpp  cMemEdit.h  cTextEdit.cpp  cTextEdit.h  cTextEditUI.cpp  cTextEditorUI.cpp  fedMain.cpp  main.cpp
filesystem/: CMakeLists.txt  main.cpp
font/: CMakeLists.txt  binaryToCompressedC.cpp  droidSansMono.h  itcSymbolBold.c  itcSymbolBold.h
graphics/: CMakeLists.txt  cDirectX11Graphics.cpp  cDirectX11Graphics.h  cDx11Graphics.cpp  cFrameBuffer-DirectX11.cpp  cFrameBuffer-OpenGL.cpp  cFrameBuffer.h  cGraphics-DirectX11.cpp  cGraphics-OpenGL.cpp  cGraphics.cpp  cGraphics.h  cOpenGlGraphics.cpp  cOpenGlGraphics.h  cPointRect.h  cQuad-DirectX11.cpp  cQuad-OpenGL.cpp  cQuad.h  cShader-DirectX11.cpp  cShader-OpenGL.cpp  cShader.h
h264/: CMakeLists.txt  annexb.c  annexb.h  biariDecode.c  biariDecode.h  biaridecod.c  biaridecod.h  binaryArithmeticDecode.c  binaryArithmeticDecode.cpp  binaryArithmeticDecode.h  blk_prediction.c  blk_prediction.h  block.c  block.cpp  block.h  buffer.c  buffer.cpp  buffer.h  cBitStream.cpp  cBitStream.h  cCabacDecode.cpp  cCabacDecode.h  cDecoder264.cpp  cDpb.cpp  cDpb.h  cFrameStore.cpp  cFrameStore.h  cPps.cpp  cPps.h  cSlice.cpp  cSlice.h  cSps.cpp  cSps.h  cabac.c  cabac.cpp  cabac.h  cabacRead.c  cabacRead.cpp  cabacRead.h  cavlcRead.c  (+191 more)
imgui/: CMakeLists.txt  TextEditor.cpp  TextEditor.h  cMemEdit.cpp  cMemEdit.h  cMemoryEdit.cpp  cMemoryEdit.h  cTest.cpp  cTextEdit.cpp  cTextEdit.h  cTextEditor.cpp  cTextEditor.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h  myImgui.cpp  myImgui.h  myImguiWidgets.cpp  myImguiWidgets.h
implot/: CMakeLists.txt  implotFolded.h
libmfx/: CMakeLists.txt
platform/: CMakeLists.txt  cGlfwPlatform.cpp  cGlfwPlatform.h  cPlatform-Glfw.cpp  cPlatform-glfw-wrapper.cpp  cPlatform-win32-wrapper.cpp  cPlatform.cpp  cPlatform.h  cWin32Platform.cpp  cWin32Platform.h
player/: CMakeLists.txt  cDrawSong.h  cPlayerApp.cpp  cPlayerApp.h  cPlayerUI.cpp  playerMain.cpp
song/: CMakeLists.txt  cSong.cpp  cSong.h  cSongLoader.cpp  cSongLoader.h  cSongPlayer.cpp  cSongPlayer.h  cSongVideoPool.cpp  cSongVideoPool.cpp.ok  cVideoPool.cpp  iVideoPool.h  streams.txt
telly/: CMakeLists.txt  cTellyApp.cpp  cTellyApp.h  cTellyUI.cpp  tellyMain.cpp
ui/: CMakeLists.txt  cApp.h  cBrushUI.cpp  cBrushUI.h  cCanvasUI.cpp  cCanvasUI.h  cColorUI.cpp  cColorUI.h  cJpegAnalyseUI.cpp  cJpegAnalyserUI.cpp  cLayers.cpp  cLayersUI.cpp  cMenuUI.cpp  cMenuUI.h  cPaintUI.cpp  cRadioUI.cpp  cTextAnalyseUI.cpp  cTextEditUI.cpp  cTextEditorUI.cpp  cUI.cpp  cUI.h  cUIBase.cpp  cUIMan.cpp  cUIMan.h  imguiWidgets.cpp  imguiWidgets.h
utils/: CMakeLists.txt  cApp.h  cBipBuffer.h  cFileUtils.h  cFileView.cpp  cLoader.cpp  cLoader.h  cLog.cpp  cLog.h  cMiniLog.cpp  cMiniLog.h  cPointRectColor.h  cSong.cpp  cSong.h  cSongPlayer.cpp  cVec.h  cVecMat.h  cVecMatrix.h  cVideoPool.cpp  format.h  formatColor.h  readerWriterQueue.h  tinyfiledialogs.c  utils.h
(+237 files in other folders)
